--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v3.0.0
       with:
-        username: ${{ vars.DOCKERHUB_USERNAME }}
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build the Docker image and Push
@@ -33,4 +33,4 @@ jobs:
         push: true
         context: .
         platforms: linux/amd64,linux/arm64
-        tags: ${{ vars.DOCKERHUB_USERNAME }}/fava-management:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/fava-management:latest
